Stop useless float wrapping title/subtitle short.

--- a/local.css
+++ b/local.css
@@ -1,22 +1,32 @@
+.pageheader {
+	padding: 1em;
+}
+
+.pageheader .header {
+	float: none;
+}
+
+.pageheader .header .headertext {
+	width: 75%;
+	float: left;
+	box-sizing: border-box;
+	padding-top: 0.3em;
+	padding-left: 0.5em;
+}
+
 .pageheader .header .title {
+	float: left;
+	clear: both;
 	font-size: 120%;
 }
 
-.pageheader .header .title .subtitle {
+.pageheader .header .subtitle {
 	font-size: small;
 	font-style: italic;
 }
 
-.pageheader .actions {
-	display: none;
-}
-
-.pageheader .trails {
-	display: none;
-}
-
-.inlineaudio {
-	margin-top: .4em;
+.sub1, .sub2 {
+	float: left;
 }
 
 #audio {
@@ -63,7 +73,18 @@ table.front {
 }
 
 img.titleimg {
-	display: block;
 	float: left;
-	margin: .4em .4em 0 0;
+	width: 25%;
+	max-width: 64px;
+}
+.pageheader .actions {
+	display: none;
+}
+
+.pageheader .trails {
+	display: none;
+}
+
+.inlineaudio {
+	margin-top: .4em;
 }
